--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
   "version": 3,
-  "rewrites": [
+  "builds": [
+    {
+      "src": "/api/server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
     {
       "source": "/(.*)",
       "destination": "api/server.js"
